# shopify-redux

./: .dockerignore  .env.docker  .env.production.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile.python  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  seed_db.sql  start-dev.sh
.dev-logs/: pids
api_service/: .env.example  .gitignore  api_calls.py  cache.py  config.py  conftest.py  dependencies.py  email_service.py  embedding_utils.py  generate_synthetic_data.py  helpers.py  logging_config.py  main.py  oauth_providers.py  requirements.txt  seed_dummy_data.py  seed_examples.py  shipping.py  utils.py
auth_backend/: .env.example  api_calls.py  conftest.py  jwt_auth.py  main.py  models.py  requirements.txt  utils.py
cad_service/: Dockerfile.sandbox  claude_cad.py  executor.py  llm_cad.py  main.py  requirements.txt  test_executor.py  utils.py
common_python_schemas/: pyproject.toml
common_python_schemas/schemas/: __init__.py
db_service/: .env.example  api_calls.py  classes.py  conftest.py  db_setup.py  events.py  helpers.py  main.py  models.py  requirements.txt  (+5 more)
fitd_schemas/: pyproject.toml  setup.py
fitd_schemas/fitd_schemas/: __init__.py  auth_utils.py  fitd_classes.py  fitd_db_schemas.py
fitd_schemas/fitd_schemas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fitd_schemas/tests/: test_models.py
jwt_auth/: README.MD  pyproject.toml  setup.py
jwt_auth/jwt_auth/: __init__.py  jwt_auth.py
jwt_auth/jwt_auth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jwt_auth/tests/: test_jwt_auth.py
(+720 files in other folders)
