[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-python-schemas"
version = "0.1.0"
description = "Common Pydantic schemas for FITD microservices"
authors = [{name = "Peter Goon", email = "pete.goon@googlemail.com"}]
license = "MIT"

[tool.setuptools.packages.find]
where = ["schemas"]