[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitd_schemas"  # Name of your package
version = "0.1.0"  # Package version
description = "Common FITD Schemas"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "PyJWT>=2.6.0",
    "fastapi>=0.95.2",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/your-repo/jwt_auth"
